# Reachy-TFG

./: Diary.txt  Parts.ods  TFG_Plantilla.doc  TFG_SUCIO.odt  Wiki
Code/: Reachy.repos
Code/DynamixelSDK/ros/dynamixel_sdk_examples/src/: motor_controller.cpp  read_write_node.cpp
Code/computer_vision/: CMakeLists.txt  package.xml
Code/computer_vision/src/: cv_node.cpp
Code/devel/: .catkin  .rosinstall
Code/devel/include/dialogflow_ros_msgs/: DialogflowContext.h  DialogflowEvent.h  DialogflowParameter.h  DialogflowRequest.h  DialogflowResult.h  DialogflowService.h  DialogflowServiceRequest.h  DialogflowServiceResponse.h
Code/devel/include/gb_dialog/: ActionMsg.h
Code/devel/include/usb_cam/: MotorMsg.h
Code/devel/lib/audio_capture/: audio_capture
Code/devel/lib/audio_play/: audio_play
Code/devel/lib/dialogflow_ros/: test_intent_event
Code/devel/lib/dynamixel_sdk/: group_bulk_read.py  group_bulk_write.py  group_sync_read.py  packet_handler.py  port_handler.py  protocol1_packet_handler.py  protocol2_packet_handler.py
Code/devel/lib/dynamixel_sdk_examples/: bulk_read_write_node  indirect_address_node  motor_controller  read_write_node  sync_read_write_node
Code/devel/lib/gb_dialog/: Reachy_speech_node
Code/devel/lib/pkgconfig/: audio_capture.pc  audio_common_msgs.pc  audio_play.pc  dialog_gui.pc  dialogflow_ros.pc  dialogflow_ros_msgs.pc  dynamixel_sdk.pc  dynamixel_sdk_examples.pc  gb_dialog.pc  simple_nodes.pc  sound_play.pc  usb_cam.pc
Code/devel/lib/python3/dist-packages/audio_common_msgs/msg/: _AudioData.py  _AudioInfo.py
Code/devel/lib/python3/dist-packages/dialogflow_ros/: __init__.py
Code/devel/lib/python3/dist-packages/dialogflow_ros_msgs/msg/: _DialogflowContext.py  _DialogflowEvent.py  _DialogflowParameter.py  _DialogflowRequest.py  _DialogflowResult.py  __init__.py
Code/devel/lib/python3/dist-packages/dialogflow_ros_msgs/srv/: _DialogflowService.py  __init__.py
Code/devel/lib/python3/dist-packages/dynamixel_sdk/: __init__.py
Code/devel/lib/python3/dist-packages/gb_dialog/msg/: _ActionMsg.py  __init__.py
Code/devel/lib/python3/dist-packages/sound_play/: __init__.py
Code/devel/lib/python3/dist-packages/sound_play/msg/: _SoundRequest.py  _SoundRequestAction.py  _SoundRequestActionFeedback.py  _SoundRequestActionGoal.py  _SoundRequestActionResult.py  _SoundRequestFeedback.py  (+2 more)
Code/devel/lib/sound_play/: play.py  playbuiltin.py  say.py  soundplay_node.py  test.py
Code/devel/lib/usb_cam/: camera_publisher  camera_subscriber
Code/devel/share/audio_capture/cmake/: audio_captureConfig.cmake
Code/devel/share/audio_common_msgs/cmake/: audio_common_msgs-msg-extras.cmake  audio_common_msgs-msg-paths.cmake  audio_common_msgsConfig.cmake
Code/devel/share/audio_play/cmake/: audio_playConfig.cmake
Code/devel/share/dialog_gui/cmake/: dialog_guiConfig.cmake
Code/devel/share/dialogflow_ros/cmake/: dialogflow_rosConfig.cmake
Code/devel/share/dialogflow_ros_msgs/cmake/: dialogflow_ros_msgs-msg-extras.cmake  dialogflow_ros_msgs-msg-paths.cmake  dialogflow_ros_msgsConfig.cmake
Code/devel/share/dynamixel_sdk/cmake/: dynamixel_sdkConfig.cmake
Code/devel/share/dynamixel_sdk_examples/cmake/: dynamixel_sdk_examples-msg-paths.cmake  dynamixel_sdk_examplesConfig.cmake
Code/devel/share/gb_dialog/cmake/: gb_dialog-msg-extras.cmake  gb_dialog-msg-paths.cmake  gb_dialogConfig.cmake
Code/devel/share/roseus/ros/audio_common_msgs/: manifest.l
Code/devel/share/roseus/ros/dialogflow_ros_msgs/: manifest.l
Code/devel/share/roseus/ros/dynamixel_sdk_examples/: manifest.l
Code/devel/share/roseus/ros/gb_dialog/: manifest.l
Code/devel/share/roseus/ros/sound_play/: manifest.l
Code/devel/share/roseus/ros/usb_cam/: manifest.l
Code/devel/share/simple_nodes/cmake/: simple_nodes-msg-paths.cmake  simple_nodesConfig.cmake
Code/devel/share/sound_play/cmake/: sound_play-msg-extras.cmake  sound_play-msg-paths.cmake  sound_playConfig.cmake
Code/devel/share/usb_cam/cmake/: usb_cam-msg-paths.cmake  usb_camConfig.cmake
Code/dialog/gb_dialog/gb_dialog/: CMakeLists.txt
Code/dialog/gb_dialog/gb_dialog/launch/: Reachy_launch.launch  gb_dialog_services_soundplay.launch
Code/dialog/gb_dialog/gb_dialog/msg/: ActionMsg.msg
Code/dialog/gb_dialog/gb_dialog/src/: Reachy_speech.cpp
Code/simple_nodes/: CMakeLists.txt  LICENSE  README.md
Code/simple_nodes/include/: talker.h
Code/simple_nodes/launch/: talker_listener.launch
Code/simple_nodes/src/: listener.cpp  talker.cpp
Code/simple_nodes/srv/: updateString.srv
Code/simple_nodes/test/: talkTest.cpp  talkTest.launch
Code/src/DynamixelSDK/ros/dynamixel_sdk_examples/: CMakeLists.txt
Code/src/DynamixelSDK/ros/dynamixel_sdk_examples/launch/: motor_launch.launch
Code/src/DynamixelSDK/ros/dynamixel_sdk_examples/src/: motor_controller.cpp  read_write_node.cpp
Code/src/dialog/dialogflow_ros/dialogflow_ros/config/: params.yaml
Code/src/dialog/gb_dialog/gb_dialog/launch/: Reachy_launch.launch
Code/src/dialog/gb_dialog/gb_dialog/src/: Reachy_speech.cpp
Code/src/usb_cam/: CMakeLists.txt
Code/src/usb_cam/launch/: camera_launch.launch
Code/src/usb_cam/msg/: MotorMsg.msg
Code/src/usb_cam/src/: camera_subscriber.cpp
Code/usb_cam/: CMakeLists.txt  package.xml
Code/usb_cam/launch/: camera_launch.launch
Code/usb_cam/msg/: SectorMsg.msg
Code/usb_cam/src/: camera_publisher.cpp  camera_subscriber.cpp
Pieces/: Antenna_support_v1.stl  Final back head.stl  Head - back v3.stl  Modified body.stl  Modified chest.stl  Motor support.stl  Motor-antena interface.blend  Motor-antena interface.blend1  Motor-antena interface.stl  Motor_head_support.stl  antenna_interface - antenna_support.step  camara exterior v2.FCStd  camara-exterior.stl  head - back v2.step  head - standard_interface_ear.step
Pieces/Imprimir/: Gancho destornillador.gcode  SD25_Antena adapter.gcode  SD25_Motor support.gcode  SD25_Pieza de lo de la antena-CompoundV2.gcode  SD25_head - neck_interface.gcode  base.stl  head - neck_interface.stl  joint.stl  soporte antena V2.gcode
Pieces/Tests/: Pieza de lo de la antena-CompoundV2.stl
(+58 files in other folders)
